# nerdsniped-by-spotify-wrapped

./: .gitignore  Cargo.toml  README.md  bad_data.json  skip.json  top200.txt
src/: main.rs
